<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SignUp"
    android:background="@drawable/bb">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:textColorHint="#000">
    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/name" android:textColorHint="#000"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/age"
        android:textColorHint="#000" />


    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/address"
        android:textColorHint="#000"/>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/contact"
        android:textColorHint="#000"></EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#000" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textColorHint="#000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/hint"
        android:textAllCaps="true"
        android:textColor="@color/abc2"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColorHint="#000"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:hint="@string/worker"
        android:textColorHint="#000"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="402dp"
        android:layout_height="180dp">


        <Button
            android:id="@+id/save"
            android:layout_width="198dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="85dp"
            android:layout_marginTop="7dp"
            android:text="@string/save" />
    </RelativeLayout>



</LinearLayout>
</ScrollView>