<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RadioButton
        android:id="@+id/langradio"
        android:layout_width="188dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="176dp"
        android:checked="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/radiobutton"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtlang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:text="@string/choose_language"
        android:textAlignment="center"
        android:textColor="@color/abc2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnapply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="62dp"
        android:text="@string/ok" />
</RelativeLayout>